--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 
 <head>
+    <!-- Gabriel de Barros The Creator -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
@@ -22,7 +23,7 @@
                         <li><a class="navbar-link save login-btn" id="openmodallogin" href="#">Login</a></li>
                         <li><a class="navbar-link load" href="#" id="openmodalcadastro">Cadastrar</a></li>
 
-                        <!-- <li><input type="color" id="stylecolor" value="#FFFFFF" readonly></li> -->
+                        <li><input type="color" id="stylecolor" value="#FFFFFF" readonly></li>
                     </ul>
                 </nav>
             </div>
@@ -43,8 +44,10 @@
                 <button type="submit" class="submit-btn">Entrar</button>
             </form>
         </div>
+        <div id="resultadobd-login"></div>
     </div>
-    </div>
+
+    
 
     <div class="modalcadastro" id="modal-cadastro">
         <div class="modal-content">
@@ -58,7 +61,7 @@
                 <label for="passwordcadastro">Senha:</label>
                 <input type="password" id="passwordcadastro" placeholder="Defina seu senha de acesso" name="passwordcadastro" minlength="5" maxlength="25" required>
 
-                <button type="submit" class="submit-btn">Caadastrar</button>
+                <button type="submit" class="submit-btn">Cadastrar</button>
             </form>
         </div>
     </div>
@@ -66,10 +69,7 @@
     <main class="main">
         <div class="width_main">
             <div class="main_info">
-                <p class="introducion"><span>O Deserto Abandonado:</span> <br>No árido deserto, você se depara com uma
-                    antiga fortaleza escondida entre dunas de areia. A fortaleza está em ruínas, com paredes desgastadas
-                    e um PORTÃO principal parcialmente aberto. A poucos metros, uma GRANDE PEDRA parece ter uma
-                    inscrição antiga. O vento faz a areia se mover ao seu redor, criando uma sensação de desolação.
+                <p class="introducion"><span>O calabouço:</span> <br>Você se encontra em um calabouço escuro e úmido, cercado por cadáveres e com um aroma de sangue no ar. No pescoço de um cadáver, você vê um pingente semelhante a uma chave.
                 </p>
             </div>
         </div>
